// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`caret renders 0 1`] = `
Array [
  .c0 {
  caret: 0;
}

<div
    className="c0"
  />,
  .c0 {
  caret: 0;
}

<div
    className="c0"
  />,
  .c0 {
  caret: 0;
}

<div
    className="c0"
  />,
  .c0 {
  caret: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`caret renders function 1`] = `
Array [
  .c0 {
  caret: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  caret: has;
}

<div
    className="c0"
  />,
  .c0 {
  caret: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  caret: has;
}

<div
    className="c0"
  />,
]
`;

exports[`caret renders invalid theme path 1`] = `
Array [
  .c0 {
  caret: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  caret: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  caret: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  caret: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`caret renders negative number 1`] = `
Array [
  .c0 {
  caret: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  caret: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  caret: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  caret: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`caret renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    caret: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    caret: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    caret: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    caret: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`caret renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    caret: July;
  }
}

@media April {
  .c0 {
    caret: August;
  }
}

@media January {
  .c0 {
    caret: September;
  }
}

@media April {
  .c0 {
    caret: November;
  }
}

@media June {
  .c0 {
    caret: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    caret: July;
  }
}

@media April {
  .c0 {
    caret: August;
  }
}

@media January {
  .c0 {
    caret: September;
  }
}

@media April {
  .c0 {
    caret: November;
  }
}

@media June {
  .c0 {
    caret: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    caret: January;
  }
}

@media April {
  .c0 {
    caret: December;
  }
}

@media January {
  .c0 {
    caret: April;
  }
}

@media April {
  .c0 {
    caret: May;
  }
}

@media June {
  .c0 {
    caret: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    caret: January;
  }
}

@media April {
  .c0 {
    caret: December;
  }
}

@media January {
  .c0 {
    caret: April;
  }
}

@media April {
  .c0 {
    caret: May;
  }
}

@media June {
  .c0 {
    caret: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`caret renders postitive number 1`] = `
Array [
  .c0 {
  caret: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  caret: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  caret: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  caret: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`caret renders string 1`] = `
Array [
  .c0 {
  caret: July;
}

<div
    className="c0"
  />,
  .c0 {
  caret: July;
}

<div
    className="c0"
  />,
  .c0 {
  caret: June;
}

<div
    className="c0"
  />,
  .c0 {
  caret: June;
}

<div
    className="c0"
  />,
]
`;

exports[`caret renders valid theme path 1`] = `
Array [
  .c0 {
  caret: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  caret: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  caret: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  caret: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
